# s1math

./: .gitignore  CLAUDE.md  README.md  samconfig.toml  template.yaml
.aws-sam/: build.toml
.github/workflows/: main.yaml
api/: .gitignore  migrate_questions.py  pyproject.toml
api/src/: handler.py  requirements.txt
syllabus/: S1_Mathematics_Syllabus.md  S2_Mathematics_Syllabus.md  S3_Mathematics_Syllabus.md
website/: algebra.html  assessment.html  exercises-algebra.html  exercises-geometry.html  exercises-numbers.html  exercises-set-theory.html  geometry.html  index.html  learning-objectives.html  numbers.html  resources.html  set-theory.html  styles.css
website/content/: algebra.html  assessment.html  geometry.html  index.html  learning-objectives.html  numbers.html  resources.html  set-theory.html
website/data/: questions-algebra.js  questions-geometry.js  questions-numbers.js
website/exercises/: exercises-algebra.html  exercises-geometry.html  exercises-numbers.html  exercises-set-theory.html  index.html  styles.css
website/exercises/data/: questions-algebra.js  questions-geometry.js  questions-numbers.js  questions-set-theory.js
website/exercises/js/: worksheet-engine.js
website/js/: worksheet-engine.js
