[project]
name = "s1math-api"
version = "0.1.0"
description = "S1 Mathematics questions API — Lambda handler and migration tooling"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
    "botocore[crt]>=1.42.96",
]

[project.scripts]
migrate = "migrate_questions:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
